# pld-generator

./: .gitignore  Cargo.toml  README.md  card_format.md  card_output.md  lucid_access.sh  template.md
.github/workflows/: cd.yml
src/: app.rs  config.rs  final_pld_template.md  image_cropping.rs  main.rs
src/github/: card.rs  mod.rs
src/lucid/: mod.rs  model.rs
src/parsing/: mod.rs
